# gdextension-binding-generator

./: .gitignore  README.md  pyproject.toml
gdextension_binding_generator/: generate_bindings.py  manifest.py  models.py  type_mapping.py  utils.py
gdextension_binding_generator/emitters/: godot_emitter.py  godot_variant_emitter.py
gdextension_binding_generator/parsing/: clang_parser.py
gdextension_binding_generator/templates/: class_header.h.j2  class_source.cpp.j2  opaque_handle_registry.h.j2  register_types.cpp.j2  register_types.h.j2  variant_class_header.h.j2  variant_class_source.cpp.j2
